--- a/prueba.html
+++ b/prueba.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Sitio Web</title>
-
-</head>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width, initial-scale-1.0">
+        <title>ppruebaaa</title>
+        <link href="https://unpkg.com/grapesjs/dist/css/grapes.min.css" rel="stylesheet">
+<script src="https://unpkg.com/grapesjs"></script>
+<script src="https://unpkg.com/grapesjs-tailwind"></script>
 <style>
-    body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 50px;
-    background-color: #f0f0f0;
-}
-h1 {
-    color: #333;
+    body, html {
+  margin: 0;
+  height: 100%;
 }
 
+.change-theme-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 5px;
+}
+
+.change-theme-button:focus {
+  /* background-color: yellow; */
+  outline: none;
+  box-shadow: 0 0 0 2pt #c5c5c575;
+}
 </style>
-<body>
-    <h1>Bienvenido a mi sitio web</h1>
-    <p>Este es un ejemplo de despliegue usando GitHub Pages.</p>
-<script>
-    console.log("Sitio web cargado correctamente.");
 
-</script></body>
+    </head>
+    <body>
+        <div id="gjs"></div>
+<script>// Handle tailwind's use of slashes in css names
+    const escapeName = (name) => `${name}`.trim().replace(/([^a-z0-9\w-:/]+)/gi, '-');
+    
+    const editor = grapesjs.init({
+      container: '#gjs',
+      height: '100%',
+      fromElement: true,
+      storageManager: false,
+      selectorManager: { escapeName },
+      plugins: ['grapesjs-tailwind'],
+    });</script>
+    </body>
 </html>
